# skills-router

./: .gitignore  CHANGELOG.md  GUIDELINE.md  MANIFEST.in  README.md  llm.txt  pyproject.toml
.antigravity/commands/: skills-router.toml
.github/workflows/: ci.yml
examples/sample_manifests/: duplicate_weather.json  email_drafter.json  weather_tool.json
readme/: de.md  es.md  fr.md  ja.md  zh.md
skills-router-npx/: README.md  package.json
src/skills_router/: __init__.py  _version.py  cli.py  config.py  mcp_server.py  metrics.py  orchestrator.py  status.py
src/skills_router/agent_bridge/: __init__.py  connect.py  discovery.py  executor.py  indexer.py  inventory.py  parser.py  profiles.py  prompts.py  routing.py  targeting.py  uninstaller.py
src/skills_router/audit/: __init__.py  logger.py
src/skills_router/daemon/: __init__.py  live_signal_fetcher.py  registry_watch.py
src/skills_router/layers/: __init__.py  capability_checker.py  dependency_resolver.py  health_check.py  hook_runner.py  lockfile.py  manifest_parser.py  mcp_client.py  (+3 more)
tests/: conftest.py  test_agent_bridge.py  test_audit_logger.py  test_capability_checker.py  test_cli_help.py  test_cli_home.py  test_cli_unicode_output.py  test_code_review_fixes.py  test_config_home.py  test_dependency_resolver.py  test_gateway_features.py  test_health_check.py  test_live_signal_fetcher.py  test_lockfile.py  test_mcp_server.py  test_metrics.py  test_orchestrator.py  test_pgvector_store.py  test_registry_resolver.py  test_registry_watch.py  test_semantic_evaluator.py  test_skill_inventory.py  test_slash_command.py  test_trust_gate.py  test_wg_prompts.py
(+13 files in other folders)
